# BriefIQ

./: readme.md  requirements.txt
brief_iq/: README.md  pyproject.toml
brief_iq/src/brief_iq/: crew.py  main.py
buddy_ai/: README.md  pyproject.toml
buddy_ai/db/: chroma.sqlite3
buddy_ai/src/buddy_ai/: crew.py  main.py
buddy_ai/src/buddy_ai/config/: agents.yaml  tasks.yaml
