[project]
name = "brief_iq"
version = "0.1.0"
description = "brief_iq using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
brief_iq = "brief_iq.main:run"
run_crew = "brief_iq.main:run"
train = "brief_iq.main:train"
replay = "brief_iq.main:replay"
test = "brief_iq.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
