[project]
name = "buddy_ai"
version = "0.1.0"
description = "buddy_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
buddy_ai = "buddy_ai.main:run"
run_crew = "buddy_ai.main:run"
train = "buddy_ai.main:train"
replay = "buddy_ai.main:replay"
test = "buddy_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
